[workspace]
members = ["macros"]

[package]
name = "woab"
version = "0.3.0"
description = "Widgets on Actors Bridge - GUI microframework for combining GTK with Actix"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/idanarye/woab"
documentation = "https://docs.rs/woab"
readme = "README.md"
keywords = ["gtk", "gui", "actix", "actor"]
categories = ["gui"]

[dependencies]
gtk = "^0.9"
glib = "^0.10"
actix = { version = "^0.11", default-features = false }
woab-macros = { version = "0.3.0", path = "macros" }
quick-xml = "0.22.0"
thiserror = "1.0.24"
hashbrown = "0.11.2"
send_wrapper = "0.5.0"
gio = "^0.9"

[dev-dependencies]
futures-util = "0.3.13"
gtk-test = "0.6.1"
anyhow = "1.0.40"
cairo-rs = "0.9.1"
gdk = "^0.13"
