[workspace]
members = ["macros"]

[package]
name = "woab"
version = "0.8.0"
description = "Widgets on Actors Bridge - a GUI microframework for combining GTK with Actix"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/idanarye/woab"
documentation = "https://docs.rs/woab"
readme = "README.md"
keywords = ["gtk", "gui", "actix", "actor"]
categories = ["gui"]
autotests = false

[[test]]
name = "basic"

[[test]]
name = "connect_nonbuilder_signals"

[[test]]
name = "no_signals"

[dependencies]
gtk4 = "^0.8"
glib = "^0.19"
gdk4 = "^0.8"
actix = { version = "^0.13", default-features = false }
tokio = { version = "^1", features = ["sync"] }
woab-macros = { version = "0.7.0", path = "macros" }
quick-xml = "^0.31"
thiserror = "^1"
hashbrown = "^0.14"
send_wrapper = "^0.6"
gio = "^0.19"

[dev-dependencies]
futures-util = "0.3.23"
# gtk-test = "0.6.1"
anyhow = "^1"
cairo-rs = "^0.19"
