[package]
name = "woab-macros"
version = "0.1.0"
description = "Procedural macros for the WoAB crate"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"
