[package]
name = "woab-macros"
version = "0.2.1"
description = "Procedural macros for the WoAB crate"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.64", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"
