[package]
name = "woab-macros"
version = "0.7.0"
description = "Procedural macros for the WoAB crate"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "^2", features = ["full", "extra-traits"] }
quote = "^1"
proc-macro2 = "^1"
