[package]
name = "woab-macros"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"
