[package]
name = "woab"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "^0.9"
actix = "^0.9"
tokio = "^0.2"
glib = "0.10.1"
woab-macros = { path = "../woab-macros" }
quick-xml = "0.18.1"

[dev-dependencies]
futures-util = "0.3.5"
